syntax = "proto2";
package article;

message CreateRequest {
  optional string title   = 1;
  optional string content = 2;
  optional string author  = 3;
}

message CreateArticleData { optional int64 id = 1; }

message CreateResponse {
  optional int32             status  = 1;
  optional string            message = 2;
  optional CreateArticleData data    = 3;
}

message GetArticleData {
  optional int64 id      = 1;
  optional string title   = 2;
  optional string content = 3;
  optional string author  = 4;
}

message GetArticleResponse {
  optional int32          status  = 1;
  optional string         message = 2;
  repeated GetArticleData data    = 3;
}